// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorageArea renders a multiple instance container 1`] = `
<div>
  <div
    class="storage-area"
  >
    <header>
      <h1>
        Trauma Tower
      </h1>
    </header>
    <main>
      <div
        class="scroll"
      >
        <div
          class="multiple-container"
        >
          <div
            class="display-name"
          >
            Trauma Chest Drain
          </div>
          <div
            class="container-numbers"
          >
            <a
              class="container-number"
              href="/container/trauma-tower/trauma-chest-drain/1"
            >
              1
            </a>
            <a
              class="container-number"
              href="/container/trauma-tower/trauma-chest-drain/2"
            >
              2
            </a>
            <a
              class="container-number"
              href="/container/trauma-tower/trauma-chest-drain/3"
            >
              3
            </a>
            <a
              class="container-number"
              href="/container/trauma-tower/trauma-chest-drain/4"
            >
              4
            </a>
            <a
              class="container-number"
              href="/container/trauma-tower/trauma-chest-drain/5"
            >
              5
            </a>
            <a
              class="container-number"
              href="/container/trauma-tower/trauma-chest-drain/6"
            >
              6
            </a>
          </div>
        </div>
        <div
          class="multiple-container"
        >
          <div
            class="display-name"
          >
            Catastrophic Haemorrhage
          </div>
          <div
            class="container-numbers"
          >
            <a
              class="container-number"
              href="/container/trauma-tower/cat-haemorrhage/1"
            >
              1
            </a>
            <a
              class="container-number"
              href="/container/trauma-tower/cat-haemorrhage/2"
            >
              2
            </a>
            <a
              class="container-number"
              href="/container/trauma-tower/cat-haemorrhage/3"
            >
              3
            </a>
          </div>
        </div>
        <div
          class="multiple-container"
        >
          <div
            class="display-name"
          >
            Max Fax Haemorrhage
          </div>
          <div
            class="container-numbers"
          >
            <a
              class="container-number"
              href="/container/trauma-tower/max-fax-haemorrhage/1"
            >
              1
            </a>
            <a
              class="container-number"
              href="/container/trauma-tower/max-fax-haemorrhage/2"
            >
              2
            </a>
            <a
              class="container-number"
              href="/container/trauma-tower/max-fax-haemorrhage/3"
            >
              3
            </a>
          </div>
        </div>
      </div>
    </main>
    <footer>
      <nav>
        <a
          aria-label="directory"
          class="navicon"
          href="/"
        >
          <svg>
            home.svg
          </svg>
          <div>
            Directory
          </div>
        </a>
        <a
          aria-label="missing-items"
          class="navicon"
          href="/missing-items"
        >
          <svg>
            checklist.svg
          </svg>
          <div>
            Missing Items
          </div>
        </a>
        <div
          aria-label="log out"
          class="navicon"
          id="auth-signout"
        >
          <svg>
            logout.svg
          </svg>
          <div>
            Log Out
          </div>
        </div>
      </nav>
    </footer>
  </div>
</div>
`;

exports[`StorageArea renders a single instance container 1`] = `
<div>
  <div
    class="storage-area"
  >
    <header>
      <h1>
        Transfer Bag 1
      </h1>
    </header>
    <main>
      <div
        class="scroll"
      >
        <a
          class="single-container"
          href="/container/transfer-bag-1/transfer-bag-1-front/1"
        >
          Airway (Front Pocket)
        </a>
        <a
          class="single-container"
          href="/container/transfer-bag-1/transfer-bag-1-front-net/1"
        >
          Airway (Front Net Pocket)
        </a>
        <a
          class="single-container"
          href="/container/transfer-bag-1/transfer-bag-1-middle/1"
        >
          Breathing (Middle Pocket)
        </a>
        <a
          class="single-container"
          href="/container/transfer-bag-1/transfer-bag-1-back/1"
        >
          Circulation (Back Pocket)
        </a>
        <a
          class="single-container"
          href="/container/transfer-bag-1/transfer-bag-1-back-cannulation/1"
        >
          Circulation (Back Pocket) Cannulation Grab Bag
        </a>
        <a
          class="single-container"
          href="/container/transfer-bag-1/transfer-bag-1-back-syringe/1"
        >
          Circulation (Back Pocket) Syringe Grab Bag
        </a>
        <a
          class="single-container"
          href="/container/transfer-bag-1/transfer-bag-1-back-net/1"
        >
          Circulation (Back Net Pockets)
        </a>
      </div>
    </main>
    <footer>
      <nav>
        <a
          aria-label="directory"
          class="navicon"
          href="/"
        >
          <svg>
            home.svg
          </svg>
          <div>
            Directory
          </div>
        </a>
        <a
          aria-label="missing-items"
          class="navicon"
          href="/missing-items"
        >
          <svg>
            checklist.svg
          </svg>
          <div>
            Missing Items
          </div>
        </a>
        <div
          aria-label="log out"
          class="navicon"
          id="auth-signout"
        >
          <svg>
            logout.svg
          </svg>
          <div>
            Log Out
          </div>
        </div>
      </nav>
    </footer>
  </div>
</div>
`;
